MyDevOrg/src/objects/Defect__c.object
<CustomObject>
    <fields>
        <fullName>Analysis__c</fullName>
        <label>Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Detected__c</fullName>
        <label>Date Detected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment_Detected_In__c</fullName>
        <label>Environment Detected In</label>
        <picklist>
            <picklistValues>
                <fullName>PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phase_Detected_In__c</fullName>
        <label>Phase Detected In</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Backlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Backlog</label>
        <referenceTo>Product_Backlog__c</referenceTo>
        <relationshipName>Defect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redesign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working as designed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Repro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEF{00000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>